--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
   h1 {
     @apply text-4xl font-extrabold;
   }
+  h2 {
+    @apply text-2xl font-bold;
+  }
+  h3 {
+    @apply text-xl font-bold;
+  }
 }
 
 @layer components {
@@ -38,7 +44,10 @@
   }
 
   .main-container {
-    @apply flex h-full w-full justify-center rounded-md px-4 pt-20;
+    @apply flex h-full w-full rounded-md px-4 pt-20;
+  }
+  .left-container {
+    @apply h-full w-full max-w-xs rounded-md border;
   }
 
   .menu {
